--- a/cubemx/cubemx.ioc
+++ b/cubemx/cubemx.ioc
@@ -13,15 +13,16 @@ Mcu.CPN=STM32L476RGT6
 Mcu.Family=STM32L4
 Mcu.IP0=FREERTOS
 Mcu.IP1=I2C1
+Mcu.IP10=USART2
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
 Mcu.IP6=TIM2
 Mcu.IP7=TIM3
-Mcu.IP8=USART1
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP8=TIM4
+Mcu.IP9=USART1
+Mcu.IPNb=11
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -41,6 +42,7 @@ Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin21=VP_SYS_VS_tim1
 Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin23=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin3=PH1-OSC_OUT (PH1)
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -48,7 +50,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PC6
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -70,6 +72,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false\:false
 NVIC.TIM1_UP_TIM16_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM16_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -172,7 +175,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -257,12 +260,17 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM2.IPParameters=AutoReloadPreload,Period
-TIM2.Period=17999999
+TIM2.IPParameters=AutoReloadPreload,Period,Prescaler
+TIM2.Period=62499
+TIM2.Prescaler=1279
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=AutoReloadPreload,Period,Channel-PWM Generation1 CH1
 TIM3.Period=49999
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM4.IPParameters=Period,AutoReloadPreload,Prescaler
+TIM4.Period=62499
+TIM4.Prescaler=1279
 USART1.IPParameters=VirtualMode,VirtualMode-Asynchronous
 USART1.VirtualMode=VM_ASYNC
 USART1.VirtualMode-Asynchronous=VM_ASYNC
@@ -277,5 +285,7 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
